# flutter-desktop-embedding

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .gn  .travis.yaml  .travis.yml  BUILD.gn  CONTRIBUTING.md  Debugging.md  Flutter-Requirements.md  LICENSE  LocalEngine.md  Quick-Start.md  README.md  analysis_options.yaml  macOS-Security.md
example/: .gitignore  App-Customization.md  README.md  pubspec.yaml  run
example_flutter/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
linux/: .gitignore  Makefile  README.md  engine.mk  gclient_manifest.gclient  (+1 more)
linux.tmpl/: main.cc
plugins/color_panel/: BUILD.gn  README.md  pubspec.yaml
plugins/color_panel/common/: channel_constants.cc  channel_constants.h
plugins/color_panel/gtk/: color_panel_plugin.cc
plugins/color_panel/ios/: color_panel.podspec
plugins/color_panel/ios/Classes/: ColorPanelPlugin.h  ColorPanelPlugin.m
plugins/color_panel/lib/: color_panel.dart
plugins/color_panel/linux/: CMakeLists.txt  Makefile  color_panel_plugin.cc  color_panel_plugin.h
plugins/color_panel/linux/include/: color_panel_plugin.h
plugins/color_panel/linux/include/color_panel/: color_panel_plugin.h
plugins/color_panel/linux/src/: color_panel_plugin.cc
plugins/color_panel/macos/: FLEColorPanelPlugin.h  FLEColorPanelPlugin.m  FLEColorPanelPlugin.mm  FlutterEmbedderColorPanel.h  color_panel.podspec
plugins/color_panel/macos/Classes/: ColorPanelPlugin.h  ColorPanelPlugin.m  ColorPanelPlugin.swift  FLEColorPanelPlugin.m
plugins/color_panel/macos/Flutter/: GeneratedPluginRegistrant.swift
plugins/color_panel/macos/FlutterEmbedderColorPanel.xcodeproj/: project.pbxproj
plugins/color_panel/macos/FlutterEmbedderColorPanel.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
plugins/common/: BUILD.gn  README.md  flutter_library.gni
plugins/common/macos/: README.md
plugins/common/macos/SharedFlutterFramework.xcodeproj/: project.pbxproj
plugins/file_chooser/: BUILD.gn  README.md  analysis_options.yaml  pubspec.yaml
plugins/file_chooser/android/: build.gradle
plugins/file_chooser/android/src/main/: AndroidManifest.xml
plugins/file_chooser/common/: channel_constants.cc  channel_constants.h
plugins/file_chooser/gtk/: file_chooser_plugin.cc
plugins/file_chooser/gtk/include/file_chooser/: file_chooser_plugin.h
plugins/file_chooser/ios/: file_chooser.podspec
plugins/file_chooser/ios/Classes/: FileChooserPlugin.h  FileChooserPlugin.m
plugins/file_chooser/lib/: file_chooser.dart
plugins/file_chooser/lib/src/: callbacks.dart  channel_controller.dart  filter_group.dart  result.dart  utilities.dart
plugins/file_chooser/linux/: CMakeLists.txt  Makefile  file_chooser_plugin.cc  file_chooser_plugin.h
plugins/file_chooser/linux/include/: file_chooser_plugin.h
plugins/file_chooser/linux/include/file_chooser/: file_chooser_plugin.h
plugins/file_chooser/linux/src/: file_chooser_plugin.cc
plugins/file_chooser/macos/: FLEFileChooserPlugin.h  FLEFileChooserPlugin.mm  file_chooser.podspec
plugins/file_chooser/macos/Classes/: FLEFileChooserPlugin.m  FileChooserPlugin.h  FileChooserPlugin.m  FileChooserPlugin.swift
plugins/file_chooser/macos/Flutter/: GeneratedPluginRegistrant.swift
plugins/file_chooser/macos/FlutterEmbedderFileChooser.xcodeproj/: project.pbxproj
plugins/file_chooser/macos/FlutterEmbedderFileChooser.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
plugins/file_chooser/windows/: CMakeLists.txt  PluginInfo.props  file_chooser.vcxproj  file_chooser_plugin.cpp  plugin.vcxproj
plugins/menubar/linux/: CMakeLists.txt  Makefile  gtk_keymaps.cc  gtk_keymaps.h  menubar_plugin.cc  menubar_plugin.h
plugins/menubar/linux/include/menubar/: menubar_plugin.h
plugins/menubar/linux/src/: menubar_plugin.cc
plugins/menubar/windows/: CMakeLists.txt  menubar_plugin.cpp  menubar_plugin.h  menubar_plugin_c_api.cpp
plugins/menubar/windows/include/menubar/: menubar_plugin.h  menubar_plugin_c_api.h
plugins/window_size/: .gitignore  .metadata  BUILD.gn  README.md  pubspec.yaml
plugins/window_size/common/: channel_constants.cc  channel_constants.h
plugins/window_size/example/: README.md  pubspec.yaml
plugins/window_size/example/integration_test/: plugin_integration_test.dart
plugins/window_size/example/lib/: main.dart
plugins/window_size/example/linux/: CMakeLists.txt  my_application.cc
plugins/window_size/example/macos/Runner.xcodeproj/: project.pbxproj
plugins/window_size/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
plugins/window_size/example/macos/Runner/Configs/: AppInfo.xcconfig
plugins/window_size/example/macos/RunnerTests/: RunnerTests.swift
plugins/window_size/example/windows/: CMakeLists.txt
plugins/window_size/example/windows/runner/: Runner.rc  main.cpp
plugins/window_size/gtk/: CMakeLists.txt  window_size_plugin.cc
plugins/window_size/ios/: window_size.podspec
plugins/window_size/ios/Classes/: WindowSizePlugin.h  WindowSizePlugin.m
plugins/window_size/lib/: window_size.dart
plugins/window_size/lib/src/: platform_window.dart  screen.dart  window_size_channel.dart  window_size_utils.dart
plugins/window_size/linux/: CMakeLists.txt  Makefile  window_size_plugin.cc  window_size_plugin.h
plugins/window_size/linux/include/: window_size_plugin.h
plugins/window_size/linux/include/window_size/: window_size_plugin.h
plugins/window_size/linux/src/: window_size_plugin.cc
plugins/window_size/macos/: FLEWindowSizePlugin.h  FLEWindowSizePlugin.mm  FlutterEmbedderWindowSize.h  window_size.podspec
plugins/window_size/macos/Classes/: FLEWindowSizePlugin.m  FLEWindowSizePlugin.mm  WindowSizePlugin.h  WindowSizePlugin.m  WindowSizePlugin.swift
plugins/window_size/macos/FlutterEmbedderWindowSize.xcodeproj/: project.pbxproj
plugins/window_size/windows/: CMakeLists.txt  PluginInfo.props  plugin.vcxproj  window_size.vcxproj  window_size.vcxproj.filters  window_size_plugin.cpp
plugins/window_size/windows/flutter/: generated_plugin_registrant.cc
plugins/window_size/windows/include/window_size/: window_size_plugin.h
(+492 files in other folders)
