# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/packaging.gni")

published_shared_library("color_panel") {
  output_name = "flutter_embedder_$target_name"

  sources = [
    "common/channel_constants.cc",
    "common/channel_constants.h",
  ]
  if (is_linux) {
    sources += [ "linux/src/color_panel_plugin.cc" ]
    public = [
      "linux/include/color_panel/color_panel_plugin.h",
    ]
  }

  defines = [
    "COLOR_PANEL_PLUGIN_IMPL",
  ]

  deps = [
    "//library:flutter_embedder",
    "//library/common/client_wrapper:client_wrapper",
  ]

  if (is_linux) {
    public_header_subdir = "color_panel"

    configs += [
      "//build/linux/config:gtk3",
      "//build/linux/config:jsoncpp",
    ]
  }
}
