# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# The location for downloading the engine library/headers.
flutter_library_download_dir = "$root_gen_dir/flutter_library"

# The directory within the client wrapper for public headers.
flutter_client_wrapper_include_dir = "include/flutter"

_flutter_library_core_headers = [
  "$flutter_library_download_dir/flutter_export.h",
  "$flutter_library_download_dir/flutter_messenger.h",
  "$flutter_library_download_dir/flutter_plugin_registrar.h",
]
_flutter_library_glfw_headers = [
  "$flutter_library_download_dir/flutter_glfw.h",
]

_flutter_client_wrapper_core_source = [
    "$flutter_library_download_dir/cpp_client_wrapper/byte_stream_wrappers.h",
    "$flutter_library_download_dir/cpp_client_wrapper/engine_method_result.cc",
    "$flutter_library_download_dir/cpp_client_wrapper/json_message_codec.cc",
    "$flutter_library_download_dir/cpp_client_wrapper/json_method_codec.cc",
    "$flutter_library_download_dir/cpp_client_wrapper/plugin_registrar.cc",
    "$flutter_library_download_dir/cpp_client_wrapper/standard_codec.cc",
    "$flutter_library_download_dir/cpp_client_wrapper/standard_codec_serializer.h",
]
_flutter_client_wrapper_glfw_source = [
    "$flutter_library_download_dir/cpp_client_wrapper/flutter_window_controller.cc",
]
_flutter_client_wrapper_core_headers = [
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/basic_message_channel.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/binary_messenger.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/encodable_value.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/engine_method_result.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/json_message_codec.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/json_method_codec.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/json_type.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/message_codec.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/method_call.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/method_channel.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/method_codec.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/method_result.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/plugin_registrar.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/standard_message_codec.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/standard_method_codec.h",
]
_flutter_client_wrapper_glfw_headers = [
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/flutter_window.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/flutter_window_controller.h",
    "$flutter_library_download_dir/cpp_client_wrapper/$flutter_client_wrapper_include_dir/plugin_registrar_glfw.h",
]

# The files that make up the downloaded engine library on Linux.
if (is_linux) {
  flutter_library_files = [
    "$flutter_library_download_dir/libflutter_linux.so",
  ]
  flutter_library_headers = _flutter_library_core_headers + _flutter_library_glfw_headers
  flutter_client_wrapper_source = _flutter_client_wrapper_core_source + _flutter_client_wrapper_glfw_source
  flutter_client_wrapper_headers = _flutter_client_wrapper_core_headers + _flutter_client_wrapper_glfw_headers
}

if (is_win) {
  flutter_library_files = [
    "$flutter_library_download_dir/flutter_windows.dll",
    "$flutter_library_download_dir/flutter_windows.dll.lib",
    "$flutter_library_download_dir/flutter_windows.dll.exp",
    "$flutter_library_download_dir/flutter_windows.dll.pdb",
  ]
  flutter_library_headers = _flutter_library_core_headers + _flutter_library_glfw_headers
  flutter_client_wrapper_source = _flutter_client_wrapper_core_source + _flutter_client_wrapper_glfw_source
  flutter_client_wrapper_headers = _flutter_client_wrapper_core_headers + _flutter_client_wrapper_glfw_headers
}
