# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/packaging.gni")

published_shared_library("window_size") {
  output_name = "flutter_embedder_$target_name"

  sources = [
    "common/channel_constants.cc",
    "common/channel_constants.h",
  ]
  if (is_linux) {
    sources += [ "linux/src/window_size_plugin.cc" ]
    public = [
      "linux/include/window_size/window_size_plugin.h",
    ]
  }

  defines = [
    "WINDOW_SIZE_PLUGIN_IMPL",
  ]

  deps = [
    "//plugins/common:fetch_flutter_library",
    "//plugins/common:flutter_wrapper",
  ]

  if (is_linux) {
    public_header_subdir = "window_size"

    configs += [
      "//build/linux/config:gtk3",
    ]

    cflags = [
      # Required for use of GdkScreen APIs for pre-GTK 3.22 compat.
      "-Wno-deprecated-declarations",
    ]
  }
}
